# l20-edu-135m-pretrain

./: .gitignore  README.md  README_HF_l20-edu-135m-sft-template.md  README_HF_l20-edu-135m.md  pyproject.toml
configs/: l20_120m.yaml  l20_135m_deepthin.yaml  l20_350m.yaml  l20_edu_135m_sft.yaml  l20_edu_135m_sft_1k_long.yaml  l20_edu_135m_sft_20k_mixed.yaml  l20_edu_135m_sft_6k_quality.yaml  l20_edu_135m_sft_6k_quality_lr5e6_offline.yaml  l20_edu_135m_sft_6k_quality_offline.yaml  l20_edu_135m_sft_behavior_patch_offline.yaml  l20_wide_140m_baseline.yaml  smoke.yaml  sota_eval.yaml
docs/: architecture_search.md  evaluation_report.md  model_card_template.md  sft_6k_quality_lr5e6_metrics.csv  sft_6k_quality_lr5e6_sanity_report.md  sft_6k_quality_lr5e6_summary.json  sft_6k_quality_metrics.csv  sft_6k_quality_sanity_report.md  sft_6k_quality_summary.json  sft_behavior_patch_metrics.csv  sft_behavior_patch_sanity_report.md  sft_behavior_patch_summary.json  sft_recipe.md  sota_comparison_protocol.md  sota_runbook.md  training_metrics.csv  training_recipe.md  training_summary.json
scripts/: build_model_card.py  check_contamination.py  check_sota_readiness.py  compare_lm_eval.py  estimate_tokens.py  eval_lm_harness.sh  eval_openllm_leaderboard.sh  eval_public_baselines.sh  eval_sft_sanity.py  model_report.py  plot_training_curves.py  prepare_behavior_sft_data.py  prepare_sft_data.py  run_full_sota_pipeline.sh  run_sft_6k_quality_pipeline.sh  sample_training_text.py  setup_eval_env.sh  sota_gate.py  train_l20_120m.sh  train_l20_135m_deepthin.sh  train_l20_350m.sh  (+1 more)
(+18 files in other folders)
